# octopi-research

./: .gitignore  LICENSE  MANIFEST.in  README.md  launch_container.sh  pyproject.toml  pytest.ini  requirements.txt  setup.sh
docs/: _sidebar.md  home.md  index.html  installation.md
firmware/: README.md
scripts/: control-demo.py  list_controllers.py  main.py  main_2cameras_sync.py  main_6060.py  main_PDAF_calibration.py  main_PDAF_demo.py  main_camera_only.py  main_displacement_measurement.py  main_hcs.py  main_malaria.py  main_motion_only.py  main_platereader.py  main_simulation.py  main_tiscamera_DZK250.py  main_tiscamera_camera_only.py  main_tiscamera_simulation.py  main_toupcam_IMX571.py  main_two_camera.py  main_two_camera_focus_tracking.py  main_two_cameras_daheng_tis.py  main_usbspectrometer.py  main_volumeric_imaging.py  my_multipoint_custom_script_entry.py  start_hypha_for_squid.py  toupcam_tests.py
software/: .gitignore  README.md  add_desktop_launcher.sh  add_desktop_launcher_malaria.sh  channel_config_focus_camera.json  channel_config_focus_camera.xml  channel_config_main_camera.json  channel_config_main_camera.xml  channel_configurations.xml.backup  channel_configurations_color.xml  configuration_HCS_v2.ini  configuration_example.txt  configuration_octopi.txt  configuration_squid_6060.ini  controllers.py  default_mutable_machine_config.json  demo.py  flowtimes_default.csv  gpio.py  gui_jetson.py  gui_v2.4 with PZT.py  gui_v2.5d.py  imaging.py  log.txt  machine_config.json  main.py  main_2cameras_sync.py  main_6060.py  main_6060.sh  main_PDAF_calibration.py  main_PDAF_demo.py  main_camera_only.py  main_displacement_measurement.py  main_hcs.py  main_malaria.py  main_motion_only.py  main_nautilus.py  (+26 more)
(+560 files in other folders)
