[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "squid-control"
version = "0.1.0"
description = "Squid (Simplifying Quantitive Imaging Development and Deployment) provides a full suite of hardware and software components for rapidly configuring high-performance microscopes tailored to users' applications with reduced cost, effort and turnaround time."
authors = [
    {name = "Hongquan Li", email = "hqli@stanford.edu"}
]
license = {text = "MIT"}
dependencies = [
    "qtpy",
    "pyserial",
    "pandas",
    "imageio",
    "crc==1.3.0",
    "setuptools==58.3.0",
    "opencv-python",
    "opencv-contrib-python",
    "lxml",
    "numpy==1.21"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["squid_control*"]
exclude = ["firmware*", "tests*"]
