[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "squid-control"
version = "0.1.0"
readme = "README.md"
description = "Squid Microscope Control Software"
dependencies = [
    "pyserial",
    "pandas",
    "imageio",
    "scipy",
    "crc==1.3.0",
    "tifffile",
    "opencv-python",
    "lxml",
    "scikit-image"
]
[project.optional-dependencies]
all = [
    "qtpy",
    "pyqt5",
    "pyqt5-tools",
    "pyqtgraph",
    "tensorrt",
]
qt = [
    "qtpy",
    "pyqt5",
    "pyqt5-tools",
    "pyqtgraph",
]
tracking = [
    "tensorrt",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["squid_control*"]
exclude = ["tests*", "scripts*"]

[options.entry_points]
console_scripts = [
    "squid-control = squid_control.__main__:main",
]